[project]
name = "agentlys_tools"
description = "Shared tools for Agentlys"
version = "0.1.0"
authors = [
    {name = "Benjamin Derville", email = "benjamin@myriade.ai"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/myriade-ai/agentlys-tools"
Changelog = "https://github.com/myriade-ai/agentlys-tools/blob/master/CHANGELOG.md"

[project.entry-points."autokernel.tools"]
terminal = "agentlys_tools.terminal:Terminal"
editor   = "agentlys_tools.code_editor:CodeEditor"

[tool.semantic_release]
version_source = "commit"
version_toml = [
    "pyproject.toml:project.version",
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
changelog_file = "CHANGELOG.md"
dist_path = "dist/"
commit_message = "chore(release): bump version to {version}"

[tool.uv.sources]
agentlys = { workspace = true }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
